--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+body{
+  background-image: url('C:\Users\svcol\Desktop\new-project\for-fun\src\brainQuestion.jpg');
+}
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-logo {
