--- a/src/components/pickNumber.css
+++ b/src/components/pickNumber.css
@@ -4,6 +4,9 @@
     border-radius: 25px;
     width: 600px;
     height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     animation-name: pro;
     animation-duration: 1s; 
     /* transform: translateY(-0.625rem);
@@ -23,6 +26,14 @@
         left: 0%;
     }
 }
+@media(max-width: 500px){
+    .myDiv{
+        width: 300px;
+    }
+}
+.buttonsDiv{
+    display: flex;
+}
 .bu{
     width: 100px;
     height: 50px;
@@ -41,5 +52,6 @@
 }
 
 h3,h2{
+    display: block;
     color: rgb(215, 223, 230);
 }
