--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url('C:\Users\svcol\Desktop\new-project\for-fun\src\brainQuestion.jpg');
+  background-image: url('C:\Users\svcol\Desktop\new-project\for-fun\src\darkness.jpg');
 }
 .App {
   text-align: center;
